As an app developer, I want to get a list of all Customers to show in my app
